# libmgf

./: CMakeLists.txt  LICENSE.txt  README.txt  index.html  style.css
applications/: CMakeLists.txt
applications/mgfvalidate/: CMakeLists.txt  mgfvalidate.cpp
applications/ms2preproc/: CMakeLists.txt  inputFileConnectionJSON.txt.cmake  inputFileFilterJSON.txt.cmake  inputFileParametersJSON.txt.cmake  inputFilePipelineJSON.txt.cmake  ms2preproc.cpp
applications/ms2preproc_libpipe/: CMakeLists.txt  input.txt  inputFileConnectionJSON.txt.cmake  inputFileFilterJSON.txt.cmake  inputFileParametersJSON.txt.cmake  inputFilePipelineJSON.txt.cmake  ms2preproc.cpp  ms2preproc_libpipe.cpp
applications/ms2preproc_libpipe/Algorithms/: MGFFilePrinter.hpp  MGFFilePrinterMerge.hpp  MgfFileMergerPrinter.hpp  MgfFileReader.hpp  MgfFileSpliter.hpp  MgfFileSpliterFour.hpp  TopXAlgorithm.hpp  TopXInWindowsOfSizeZAlgorithm.hpp  TopXInYRegionsAlgorithm.hpp  util.hpp
applications/rix/: CMakeLists.txt  rix.cpp
applications/tmtadducts/: CMakeLists.txt  tmtadducts.cpp
doc/: Doxyfile.cmake  Mainpage.h  mgf_grammar.txt
doc/html/: _flex_lexer_8h_source.html  _mainpage_8h_source.html  _nodes_8h_source.html  _parser_8h_source.html  _scanner_8h_source.html  annotated.html  class_flex_lexer-members.html  class_flex_lexer.html  classes.html  classmgf_1_1_parser-members.html  classmgf_1_1_parser.html  classmgf_1_1_scanner-members.html  classmgf_1_1_scanner.html  classyy_flex_lexer-members.html  classyy_flex_lexer.html  files.html  functions.html  functions_func.html  functions_type.html  functions_vars.html  hierarchy.html  index.html  structmgf_1_1_parser_1_1token-members.html  structmgf_1_1_parser_1_1token.html  structmgf_1_1detail_1_1_double_pair_list_node-members.html  structmgf_1_1detail_1_1_double_pair_list_node.html  structmgf_1_1detail_1_1_double_pair_node-members.html  structmgf_1_1detail_1_1_double_pair_node.html  structmgf_1_1detail_1_1_integer_list_node-members.html  structmgf_1_1detail_1_1_integer_list_node.html  structmgf_1_1detail_1_1_integer_node-members.html  structmgf_1_1detail_1_1_integer_node.html  structmgf_1_1detail_1_1_node-members.html  structmgf_1_1detail_1_1_node.html  structyy__buffer__state-members.html  structyy__buffer__state.html  structyy__trans__info-members.html  structyy__trans__info.html  unionmgf_1_1_parser_1_1semantic__type-members.html  unionmgf_1_1_parser_1_1semantic__type.html
doc/html/search/: all_64.html  all_69.html  all_6c.html  all_6e.html  all_70.html  all_73.html  all_74.html  all_79.html  all_7e.html  classes_64.html  classes_66.html  classes_70.html  classes_73.html  classes_74.html  classes_79.html  functions_64.html  functions_6c.html  functions_70.html  functions_73.html  functions_79.html  search.js  typedefs_64.html  typedefs_6c.html  typedefs_74.html  variables_79.html
htdocs/: index.html
include/mgf/: Collection.h  Context.h  Driver.h  MassAbundancePair.h  MgfFile.h  MgfHeader.h  MgfSpectrum.h  config.h.cmake  mgf.h  utils.h
include/mgfp/: Context.h  MassAbundancePair.h  MgfFile.h  MgfHeader.h  MgfSpectrum.h  mgfp.h  utils.h
mgfp/: CMakeLists.txt  Doxyfile.cmake  LICENSE.txt  README.txt  config.h.cmake
mgfp/applications/: CMakeLists.txt
mgfp/applications/mgfvalidate/: CMakeLists.txt  mgfvalidate.cpp
mgfp/applications/ms2preproc/: CMakeLists.txt
mgfp/applications/rix/: CMakeLists.txt  rix.cpp
mgfp/applications/tmtadducts/: CMakeLists.txt
mgfp/applications/tmtx/: tmtx.cpp
mgfp/doc/: Doxyfile.cmake  Mainpage.h  README  mgf_grammar.txt
mgfp/htdocs/: index.html  style.css
mgfp/include/mgfp/: Collection.h  Context.h  Driver.h  MassAbundancePair.h  MgfFile.h  MgfHeader.h  MgfSpectrum.h  config.h.cmake  mgfp.h  utils.h
mgfp/src/: CMakeLists.txt  Driver.cpp  FlexLexer.h  MgfFile.cpp  MgfHeader.cpp  MgfSpectrum.cpp  Nodes.h  Parser.cpp  Parser.h  Parser.ypp  Scanner.cpp  Scanner.h  Scanner.l  location.h  position.h  stack.h
mgfp/test/: CMakeLists.txt  Collection-test.cpp  ParserFormat-test.cpp
mgfp/test/data/: inputformats.mgf  titleformats.mgf  tmtx.mgf
mgfp/test/include/: mgfpunittest.h.in
src/: CMakeLists.txt  Driver.cpp  FlexLexer.h  Makefile.createParser  MgfFile.cpp  MgfHeader.cpp  MgfSpectrum.cpp  Parser.cpp  Parser.h  Parser.ypp  Scanner.h  location.h  position.h  stack.h
test/: CMakeLists.txt  Collection-test.cpp  ParserFormat-test.cpp  create_test.py
test/include/: libmgfunittest.h.in  mgfpunittest.h.in
